force-app/main/default/objects/Staff_Line_Items__c/Staff_Line_Items__c.object-meta.xml
<CustomObject>
    <label>Staff Line Items</label>
    <nameField>
        <displayFormat>SLI-{0}</displayFormat>
        <label>Staff Line Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staff Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>