force-app/main/default/objects/Staff_Line_Items__c/fields/FringeAmount__c.field-meta.xml
<CustomField>
    <fullName>FringeAmount__c</fullName>
    <label>Fringe Amount($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>