force-app/main/default/objects/Staff_Line_Items__c/fields/HoursWorked__c.field-meta.xml
<CustomField>
    <fullName>HoursWorked__c</fullName>
    <label>Hours worked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>