force-app/main/default/objects/Staff_Line_Items__c/fields/Payroll_Report__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payroll Report</label>
    <referenceTo>Payroll_Report__c</referenceTo>
    <relationshipLabel>Staff Line Items</relationshipLabel>
    <relationshipName>Staff_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>