force-app/main/default/objects/Staff_Line_Items__c/fields/StaffName__c.field-meta.xml
<CustomField>
    <fullName>StaffName__c</fullName>
    <label>Staff Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>