force-app/main/default/objects/Staff_Line_Items__c/fields/StaffType__c.field-meta.xml
<CustomField>
    <fullName>StaffType__c</fullName>
    <label>Staff Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>