force-app/main/default/objects/Staff_Line_Items__c/fields/TotalAmountPaid__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountPaid__c</fullName>
    <label>Total Amount paid($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>