force-app/main/default/objects/Staff_Line_Items__c/fields/TotalCompensation__c.field-meta.xml
<CustomField>
    <fullName>TotalCompensation__c</fullName>
    <label>Total Compensation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>